--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,5 +24,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PS'
 - !lcsh 'African Americans -- Fiction'
+- GITenberg
 title: Lady Luck
 url: http://www.gutenberg.org/ebooks/26165
